--- a/templates/valutazione_generale/show.html.twig
+++ b/templates/valutazione_generale/show.html.twig
@@ -82,9 +82,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_valutazione_generale_index') }}">back to list</a>
+    <a href="{{ path('app_valutazione_generale_index') }}">Torna alla lista</a>
 
-    <a href="{{ path('app_valutazione_generale_edit', {'id': valutazione_generale.id}) }}">edit</a>
+    <a href="{{ path('app_valutazione_generale_edit', {'id': valutazione_generale.id}) }}">Modifica</a>
 
     {{ include('valutazione_generale/_delete_form.html.twig') }}
 {% endblock %}
