--- a/templates/chiusura_servizio/index.html.twig
+++ b/templates/chiusura_servizio/index.html.twig
@@ -11,8 +11,8 @@
                 <th>Id</th>
                 <th>Nome</th>
                 <th>Conclusioni</th>
-                <th>DataValutazione</th>
-                <th>actions</th>
+                <th>Data di valutazione</th>
+                <th>Azioni</th>
             </tr>
         </thead>
         <tbody>
