--- a/templates/chiusura_servizio/show.html.twig
+++ b/templates/chiusura_servizio/show.html.twig
@@ -20,7 +20,7 @@
                 <td>{{ chiusura_servizio.conclusioni }}</td>
             </tr>
             <tr>
-                <th>DataValutazione</th>
+                <th>Data di valutazione</th>
                 <td>{{ chiusura_servizio.dataValutazione ? chiusura_servizio.dataValutazione|date('Y-m-d') : '' }}</td>
             </tr>
         </tbody>
