--- a/templates/valutazione_figura_professionale/new.html.twig
+++ b/templates/valutazione_figura_professionale/new.html.twig
@@ -3,9 +3,9 @@
 {% block title %}New ValutazioneFiguraProfessionale{% endblock %}
 
 {% block body %}
-    <h1>Create new ValutazioneFiguraProfessionale</h1>
+    <h1>Crea nuova Valutazione Figura Professionale</h1>
 
     {{ include('valutazione_figura_professionale/_form.html.twig') }}
 
-    <a href="{{ path('app_valutazione_figura_professionale_index') }}">back to list</a>
+    <a href="{{ path('app_valutazione_figura_professionale_index') }}">Torna alla lista</a>
 {% endblock %}
