--- a/templates/valutazione_generale/edit.html.twig
+++ b/templates/valutazione_generale/edit.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Modifica Valutazione Generale</h1>
 
-    {{ include('valutazione_generale/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('valutazione_generale/_form.html.twig', {'button_label': 'Modifica'}) }}
 
     <a href="{{ path('app_valutazione_generale_index') }}">torna alla lista</a>
 
