--- a/templates/valutazione_generale/index.html.twig
+++ b/templates/valutazione_generale/index.html.twig
@@ -46,7 +46,7 @@
                 <td>{{ valutazione_generale.alimentazione }}</td>
                 <td>{{ valutazione_generale.indicatoreDeambulazione }}</td>
                 <td>{{ valutazione_generale.igenePersonale }}</td>
-                <td>{{ valutazione_generale.cognitività }}</td>
+                <td>{{ valutazione_generale.cognitivita }}</td>
                 <td>{{ valutazione_generale.comportamento }}</td>
                 <td>
                     <a href="{{ path('app_valutazione_generale_show', {'id': valutazione_generale.id}) }}">mostra</a>
