--- a/templates/valutazione_generale/show.html.twig
+++ b/templates/valutazione_generale/show.html.twig
@@ -32,10 +32,6 @@
                 <td>{{ valutazione_generale.diagnosi }}</td>
             </tr>
             <tr>
-                <th>Firma operatore</th>
-                <td>{{ valutazione_generale.firmaOperatore }}</td>
-            </tr>
-            <tr>
                 <th>Tipologia valutazione</th>
                 <td>{{ valutazione_generale.tipologiaValutazione }}</td>
             </tr>
@@ -73,7 +69,7 @@
             </tr>
             <tr>
                 <th>Cognitività</th>
-                <td>{{ valutazione_generale.cognitività }}</td>
+                <td>{{ valutazione_generale.cognitivita }}</td>
             </tr>
             <tr>
                 <th>Comportamento</th>
