--- a/templates/valutazione_figura_professionale/edit.html.twig
+++ b/templates/valutazione_figura_professionale/edit.html.twig
@@ -3,11 +3,11 @@
 {% block title %}Edit ValutazioneFiguraProfessionale{% endblock %}
 
 {% block body %}
-    <h1>Edit ValutazioneFiguraProfessionale</h1>
+    <h1>Modifica Valutazione Figura Professionale</h1>
 
-    {{ include('valutazione_figura_professionale/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('valutazione_figura_professionale/_form.html.twig', {'button_label': 'Modifica'}) }}
 
-    <a href="{{ path('app_valutazione_figura_professionale_index') }}">back to list</a>
+    <a href="{{ path('app_valutazione_figura_professionale_index') }}">Torna alla lista</a>
 
     {{ include('valutazione_figura_professionale/_delete_form.html.twig') }}
 {% endblock %}
