--- a/templates/barthel/new.html.twig
+++ b/templates/barthel/new.html.twig
@@ -3,9 +3,9 @@
 {% block title %}New Barthel{% endblock %}
 
 {% block body %}
-    <h1>Create new Barthel</h1>
+    <h1>Crea nuova scheda Barthel</h1>
 
     {{ include('barthel/_form.html.twig') }}
 
-    <a href="{{ path('app_barthel_index') }}">back to list</a>
+    <a href="{{ path('app_barthel_index') }}">torna alla lista</a>
 {% endblock %}
