--- a/templates/barthel/show.html.twig
+++ b/templates/barthel/show.html.twig
@@ -16,7 +16,7 @@
                 <td>{{ barthel.nome }}</td>
             </tr>
             <tr>
-                <th>DataValutazione</th>
+                <th>Data di valutazione</th>
                 <td>{{ barthel.dataValutazione ? barthel.dataValutazione|date('Y-m-d') : '' }}</td>
             </tr>
             <tr>
@@ -24,11 +24,11 @@
                 <td>{{ barthel.alimentazione }}</td>
             </tr>
             <tr>
-                <th>BagnoDoccia</th>
+                <th>Bagno Doccia</th>
                 <td>{{ barthel.bagnoDoccia }}</td>
             </tr>
             <tr>
-                <th>IgienePersonale</th>
+                <th>Igiene Personale</th>
                 <td>{{ barthel.igienePersonale }}</td>
             </tr>
             <tr>
@@ -36,11 +36,11 @@
                 <td>{{ barthel.abbigliamento }}</td>
             </tr>
             <tr>
-                <th>ContinenzaIntestinale</th>
+                <th>Continenza Intestinale</th>
                 <td>{{ barthel.continenzaIntestinale }}</td>
             </tr>
             <tr>
-                <th>ContinenzaUrinaria</th>
+                <th>Continenza Urinaria</th>
                 <td>{{ barthel.continenzaUrinaria }}</td>
             </tr>
             <tr>
@@ -48,11 +48,11 @@
                 <td>{{ barthel.toilet }}</td>
             </tr>
             <tr>
-                <th>TotaleValutazioneFunzionale</th>
+                <th>Totale Valutazione Funzionale</th>
                 <td>{{ barthel.totaleValutazioneFunzionale }}</td>
             </tr>
             <tr>
-                <th>TrasferimentoLettoSedia</th>
+                <th>Trasferimento Letto Sedia</th>
                 <td>{{ barthel.trasferimentoLettoSedia }}</td>
             </tr>
             <tr>
@@ -68,7 +68,7 @@
                 <td>{{ barthel.deambulazioneValida }}</td>
             </tr>
             <tr>
-                <th>UsoCarrozzina</th>
+                <th>Uso Carrozzina</th>
                 <td>{{ barthel.usoCarrozzina }}</td>
             </tr>
             <tr>
@@ -78,9 +78,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_barthel_index') }}">back to list</a>
+    <a href="{{ path('app_barthel_index') }}">torna alla lista</a>
 
-    <a href="{{ path('app_barthel_edit', {'id': barthel.id}) }}">edit</a>
+    <a href="{{ path('app_barthel_edit', {'id': barthel.id}) }}">modifica</a>
 
     {{ include('barthel/_delete_form.html.twig') }}
 {% endblock %}
