--- a/templates/spmsq/show.html.twig
+++ b/templates/spmsq/show.html.twig
@@ -65,6 +65,23 @@
             </tr>
         </tbody>
     </table>
+    <div class="alert alert-info" role="alert">
+    <div class="row">
+    Esito della valutazione
+    </div>
+    <div class="row">
+    - 0-2 errori: assenza di deterioramento
+    </div>
+    <div class="row">
+    - 3-4 errori: deterioramento lieve
+    </div>
+    <div class="row">
+    - 5-7 errori: deterioramento moderato
+    </div>
+    <div class="row">
+    - 8-10 errori: deterioramento grave
+    </div>
+</div>
 
     <a href="{{ path('app_s_p_m_s_q_index') }}">Torna alla lista</a>
 
